--- a/index.html
+++ b/index.html
@@ -15,81 +15,82 @@
   </head>
   <body>
     <!-- Шапка сайту -->
-    <header>
+    <header class="header">
       <!-- Навігація -->
-      <nav>
-        <ul>
-          <li><a href="#">LIFESTYLE</a></li>
-          <li><a href="#">PHOTODIARY</a></li>
-          <li><a href="#">MUSIC</a></li>
-          <li><a href="#">TRAVEL</a></li>
+      <nav class="header-menu">
+        <ul class="menu-list">
+          <li class="menu-item"><a href="#" class="menu-link">LIFESTYLE</a></li>
+          <li class="menu-item"><a href="#" class="menu-link">PHOTODIARY</a></li>
+          <li class="menu-item"><a href="#" class="menu-link">MUSIC</a></li>
+          <li class="menu-item"><a href="#" class="menu-link">TRAVEL</a></li>
+          
         </ul>
       </nav>
     </header>
     <!-- Основна частина -->
-    <main>
-      <section>
-        <div>
-          <article>
-            <img src="./images/01.jpg" alt="LIFESTYLE" />
-            <p>LIFESTYLE</p>
-            <h2>More than just a music festival</h2>
-            <p>
+    <main class="main">
+      <section class="gallary">
+        <div class="galllery-cards">
+          <article class="card">
+            <img class="gallary-foto" src="./images/01.jpg" alt="LIFESTYLE" />
+            <p class="gallary-category">LIFESTYLE</p>
+            <h2 class="gallary-title">More than just a music festival</h2>
+            <p class="gallary-text">
               Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
               eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
               enim ad minim veniam, quis nostrud exercitation ullamco laboris
               nisi ut aliquip ex ea.
             </p>
           </article>
-          <article>
-            <img src="./images/02.jpg" alt="LIFESTYLE" />
-            <p>LIFESTYLE</p>
-            <h2>Life tastes better with coffee</h2>
-            <p>
+          <article class="card">
+            <img class="gallary-foto" src="./images/02.jpg" alt="LIFESTYLE" />
+            <p class="gallary-category">LIFESTYLE</p>
+            <h2 class="gallary-title">Life tastes better with coffee</h2>
+            <p class="gallary-text">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+              enim ad minim veniam, quis nostrud exercitation ullamco laboris
+              nisi ut aliquip ex ea.
+            </p>
+          </a>
+          <article class="card">
+            <img class="gallary-foto" src="./images/03.jpg" alt="LIFESTYLE" />
+            <p class="gallary-category">PHOTODAIRY</p>
+            <h2 class="gallary-title">American dream</h2>
+            <p class="gallary-text">
               Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
               eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
               enim ad minim veniam, quis nostrud exercitation ullamco laboris
               nisi ut aliquip ex ea.
             </p>
           </article>
-          <article>
-            <img src="./images/03.jpg" alt="LIFESTYLE" />
-            <p>PHOTODAIRY</p>
-            <h2>American dream</h2>
-            <p>
+          <article class="card">
+            <img class="gallary-foto" src="./images/04.jpg" alt="LIFESTYLE" />
+            <p class="gallary-category">PHOTODAIRY</p>
+            <h2 class="gallary-title">A day exploring the Alps</h2>
+            <p class="gallary-text">
               Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
               eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
               enim ad minim veniam, quis nostrud exercitation ullamco laboris
               nisi ut aliquip ex ea.
             </p>
           </article>
-          <article>
-            <img src="./images/04.jpg" alt="LIFESTYLE" />
-            <p>PHOTODAIRY</p>
-            <h2>A day exploring the Alps</h2>
-            <p>
+          <article class="card">
+            <img class="gallary-foto" src="./images/05.jpg" alt="LIFESTYLE" />
+            <p class="gallary-category">LIFESTYLE</p>
+            <h2 class="gallary-title">Top 10 song for running</h2>
+            <p class="gallary-text">
               Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
               eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
               enim ad minim veniam, quis nostrud exercitation ullamco laboris
               nisi ut aliquip ex ea.
             </p>
           </article>
-          <article>
-            <img src="./images/05.jpg" alt="LIFESTYLE" />
-            <p>LIFESTYLE</p>
-            <h2>Top 10 song for running</h2>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-              enim ad minim veniam, quis nostrud exercitation ullamco laboris
-              nisi ut aliquip ex ea.
-            </p>
-          </article>
-          <article>
-            <img src="./images/06.jpg" alt="LIFESTYLE" />
-            <p>LIFESTYLE</p>
-            <h2>Cold winter days</h2>
-            <p>
+          <article class="card">
+            <img class="gallary-foto" src="./images/06.jpg" alt="LIFESTYLE" />
+            <p class="gallary-category">LIFESTYLE</p>
+            <h2 class="gallary-title">Cold winter days</h2>
+            <p class="gallary-text">
               Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
               eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
               enim ad minim veniam, quis nostrud exercitation ullamco laboris
